--- a/projects/foca17.html
+++ b/projects/foca17.html
@@ -63,13 +63,12 @@
 		<div class="content_text">
             Skating has always been a huge part of my life. I grew up in Minnesota and remember chilly winter days, the neighborhood dads venturing out onto the pond to check if it was safe, and the squeals of the kids as we skated on the shoveled surface. <br/><br/>
             When I was 9, I watched Sasha Cohen compete at the 2006 Olympics. I clearly remember
-            thinking, “I was to be just like her”, and a year later my mom signed me up for Learn to
+            thinking, “I want to be just like her”, and a year later my mom signed me up for Learn to
             Skate. <br/><br/>
             I FELL IN LOVE. Sorry Shep, skating is my first true love, and I was obsessed.  I went to bed with my ankles crossed to mimic proper jumping form while I slept. My screen name on neopets and webkinz was “foca17”, Future Olympic Champion at 17. I mentally choreographed programs to every pop song on the radio. I lived and breathed the dream.<br/> <br/>
             For better or worse, the Olympic dream didn’t pan out due to financial reasons and a
             back injury when I was 15. I stopped skating competitively, but picked it up again in
-            college with the Dartmouth Figure Skating Team. There, I lived the
-            Intercollegiate dream with the most amazing team members who are
+            college with the Dartmouth Figure Skating Team with the most amazing team members who are
             still my closest friends. <br/><br/>
             <div class="container_sideBySide"> 
 				<div class="sideBySideItem width_33">
@@ -102,7 +101,8 @@
                 skate celebrating the strength of women as well as <a
                 href="https://www.youtube.com/watch?v=uLyGdYvbboM" class="link"
                 target="_blank">Nathan Chen’s “Rocketman” free skate</a>, a
-                joyous program where he fully let loose at the end. These performances lit a fire underneath me and I decided to get back into
+                joyous program where he fully let loose at the end. These
+                performances lit a fire underneath me and got me back into
                 the sport.
             </br>
             </div>
@@ -172,11 +172,9 @@
             <div class="card_title">September-November 2022: Getting my existing
             jumps back</div>
             <div class="content_text">
-                This was a surprinsgly frustrating process. I was known for
-                consistency in college, so I fully expected to get my double jumps back
-                with no problem. However, jumps like the double toe loop
-                were especially difficult, and I struggled through fear of falling / self-doubt.
-                To help me through the process, I watched a ton of technique
+                This was a surprinsgly frustrating process. Consistency was
+                always my forte, but jumps like the double toe loop did not come
+                back easily. To help me through the process, I watched a ton of technique
                 videos on YouTube and practiced the jumps off-ice. <br/><br/>
                 <div class="container_sideBySide"> 
                     <div class="sideBySideItem width_50">
@@ -197,7 +195,10 @@
                 ice for about a month, so I'll continue working on my back
                 flexibility (which is abysmal right now) for my spins and
                 landing position, and improving my
-                knee/hip flexibility for spread eagles, ina bauers, and deeper edges.
+                knee/hip flexibility for spread eagles, ina bauers, and deeper
+                edges.
+                <br/><br/>
+                <img class="summary_image" src="../assets/skating-lake.gif"/>
             </div>
 
 		<br>
