Updating some text

--- a/projects/foca17.html
+++ b/projects/foca17.html
@@ -196,7 +196,11 @@
                 flexibility (which is abysmal right now) for my spins and
                 landing position, and improving my
                 knee/hip flexibility for spread eagles, ina bauers, and deeper
-                edges.
+                edges. 
+                <br/><br/>
+                🚨🚨🚨 HAPPY PLACE ALERT 🚨🚨🚨<br/>
+                Got to skate on a pond at Camp Glen Brook in New Hampshire!
+                Thank you Shep for filming :)
                 <br/><br/>
                 <img class="summary_image" src="../assets/skating-lake.gif"/>
             </div>
