--- a/about.html
+++ b/about.html
@@ -126,10 +126,13 @@
 			<br/><br/>	Currently I'm advising the <a
 			href="https://www.greenway.org/" class="link"
 			target="_blank">East Coast Greenway Alliance</a>
-			on building accessible trails and I'm working with <a
+			on building accessible trails and designing guided user experiences
+			at Appian.
+			<!-- I'm working with 
+			<a
 			href="https://www.thesuperbill.com/" class="link"
 			target="_blank">SuperBill</a> to
-			design a better health insurance reimbursement experience.
+			design a better health insurance reimbursement experience. -->
 			</div>
 			<a href="#container_content"><button class="button_circle_arrow" >
 				<i class="fas fa-arrow-down"></i>			
@@ -155,9 +158,9 @@
 	<div class="container_sideBySide"> 
 			<div class="content_text width_50">
 					<div class="section_title"><img class="section_icon" src="assets/regina-resume_experience.svg">Experience</div>
-					<b>Senior Product Designer @ SuperBill</b><br/>
+					<!-- <b>Senior Product Designer @ SuperBill</b><br/>
 					2023 - Present<br/>
-					Leading product design for a healthcare startup<br/><br/>
+					Leading product design for a healthcare startup<br/><br/> -->
 					<b>Senior UX Designer @ Appian</b><br/>
 				2019 - 2023<br/>
 				Designed guided app-building experiences and developer operations tools; Spearheaded the product illustration initiative<br/><br/>
