fixing font stuff

--- a/projects/foca17.html
+++ b/projects/foca17.html
@@ -165,7 +165,7 @@
  
             </div>
             <div class="card_title">June-August 2022: Brief hiatus due to moving
-            + travelling</div>
+            + travelling + getting COVID 😭😭😭</div>
             <div class="content_text"> 
 
         </div>
