--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
 	<title>Regina | About</title>
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">   
+	<link rel="stylesheet" href="assets/stylesheet.css" type="text/css" charset="utf-8" />
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">   
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://kit.fontawesome.com/be865165bc.js" crossorigin="anonymous"></script>
 	<link runat="server" rel="icon" type="image/png" href="assets/favicon-01.png">
@@ -126,8 +127,9 @@
 			<br/><br/>	Currently I'm advising the <a
 			href="https://www.greenway.org/" class="link"
 			target="_blank">East Coast Greenway Alliance</a>
-			on building accessible trails and designing guided user experiences
-			at Appian.
+			on building accessible trails and working with <a
+			href="https://www.thesuperbill.com/" class="link"
+			target="_blank">SuperBill</a> to design a better health insurance reimbursement experience.
 			<!-- I'm working with 
 			<a
 			href="https://www.thesuperbill.com/" class="link"
@@ -158,9 +160,9 @@
 	<div class="container_sideBySide"> 
 			<div class="content_text width_50">
 					<div class="section_title"><img class="section_icon" src="assets/regina-resume_experience.svg">Experience</div>
-					<!-- <b>Senior Product Designer @ SuperBill</b><br/>
+					<b>Senior Product Designer @ SuperBill</b><br/>
 					2023 - Present<br/>
-					Leading product design for a healthcare startup<br/><br/> -->
+					Leading product design for a healthcare startup<br/><br/>
 					<b>Senior UX Designer @ Appian</b><br/>
 				2019 - 2023<br/>
 				Designed guided app-building experiences and developer operations tools; Spearheaded the product illustration initiative<br/><br/>
@@ -180,8 +182,8 @@
 				<div class="content_text width_50">
 					<div class="section_title"><img class="section_icon"
 						src="assets/regina-resume_interests.svg">Interests & Service</div>
-						Rock climbing, bikepacking, DIY-ing, cooking Thai food, eating
-						dark chocolate, petting our dog<br/><br/>
+						Rock climbing, bikepacking, Figure skating, DIY-ing, cooking Thai food, eating
+						dark chocolate, petting our dog Moose<br/><br/>
 						<b>East Coast Greenway Alliance Board member</b><br/>
 							2023 - Present<br/>
 						Advising the ECGA on outreach efforts and user
