--- a/projects/ecg.html
+++ b/projects/ecg.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">   
     <script src="https://kit.fontawesome.com/be865165bc.js" crossorigin="anonymous"></script>
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -479,7 +479,7 @@
             <div class="content_text">
                     <div class="bullet_list">
                         <div class="bullet"><strong>A better understanding of bike maintenance.</strong> I could only fix a flat and tighten / unscrew a few things. I didn’t run into serious issues other than my hydraulic brakes breaking (and not braking!) but I would have had much more peace of mind had I better understood a few more things </div>
-                        <div class="bullet"><strong>Go on a real test ride before the trip.</strong> And/or not do 140 miles on the first day! I quickly learned that the chamois cream actually is a necessity (there was so much chafing the first few days before I finally got my hands on some), and I should definitely not be carrying all my water on my back (very quickly bought bottle cages on day 3) 
+                        <div class="bullet"><strong>Go on a real test ride before the trip.</strong> And/or not do 140 miles on the first day! I quickly learned that the chamois cream actually is a necessity (there was so much chafing the first few days before I finally got my hands on some), and I should definitely not be carrying all my water on my back (very quickly bought bottle cages on day 3) </div>
                         <div class="bullet"><strong>Take it slower.</strong> 100 miles a day meant about 8 hours on the bike for me. I had to go at this pace because I wanted to finish the entire trip in the amount of time I could take off work. So, this meant I didn’t take any rest days — if there was torrential downpour (and there was!), I couldn’t take a day off and avoid the rain. </div>
                         <div class="bullet"><strong>Document better.</strong> The bike video I made was pretty limited to whatever random footage I took. To be honest, I didn’t actually think I could make it to the end when the trip started, so I didn’t explicitly put effort into taking good videos bbecause I didn’t think there’d be a bike video afterwards. Once I hit Florida, I knew I would make it to the end and that’s when I actually started putting effort into documenting the trip. </div>
                         <div class="bullet"><strong>Bring a Visa or MasterCard.</strong> I had my American Express credit card and many small business do not take Amex because they charges high fees.</div>
