updated font to include handwriting

--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
 			</div>
 		</div>
 		<div class="section_summary_text">
-			<div class="summary_title"> Empathetic, Resilient & Goofy</div>
+			<div class="summary_title"> EMPATHETIC, RESILIENT & GOOFY</div>
 			<br/>
 			<div class="summary_description">Empathetic, resilient and goofy. I'm known for my love for understanding people, my grit and determination to learn anything I set my mind to, and my light-hearted, silly attitude towards life.
 			<br/><br/>				
@@ -145,7 +145,7 @@
 		<div class="container_content_wrapper_content vertical">
 			<div class="container_sideBySide">
 				<div class="sideBySideItem width_50">
-					<div class="summary_title">Highlights</div>
+					<div class="summary_title">HIGHLIGHTS</div>
 				</div>
 				<div class="sideBySideItem width_50 sideBySideItem_isLast sideBySideItem_alignEnd">
 					<a
