--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 		<div class="fadeIn" style="visibility:hidden" id="delay3">
 			<div class="category fadeIn" >
-				<div class="category_title index">Featured Projects</div>
+				<div class="category_title index">FEATURED PROJECTS</div>
 			</div>
 			<a href="#container_content"><button class="button_circle_arrow index" >
 				<i class="fas fa-arrow-down"></i>			
@@ -184,7 +184,7 @@
 </script>
 <script>
 		var i = 0;
-		var txt = "Hi there, I'm Regina";
+		var txt = "HI THERE, I'M REGINA";
 		var speed = 80;
 		var speed2 = 3000;
 		let index = 0;
