tweaking font stuff

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 </script>
 <script>
 		var i = 0;
-		var txt = "HI THERE, I'M REGINA";
+		var txt = "Hi there, I'm Regina!";
 		var speed = 80;
 		var speed2 = 3000;
 		let index = 0;
