--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
 				</div>
 				<div class="sideBySideItem width_50 sideBySideItem_isLast sideBySideItem_alignEnd">
 					<a
-					href="assets/resume_reginayan.pdf"
+					href="assets/reginayan_resume.pdf"
 					target="_blank" class="button_secondary no_margin">Full Resume PDF <i class="fas
 					fa-external-link-square-alt"></i></a>
 				</div>
