--- a/illustration.html
+++ b/illustration.html
@@ -91,6 +91,15 @@
 						<div class="card_tag photoshop">Adobe Fresco</div>
 					</div>
 			</a>
+			<a href="projects/fonts.html" class="card">
+				<img class="card_image" src="assets/fonts.png"/>
+				<div class="card_title">Fonts!</div>
+				<div class="card_description"> Free fonts for personal use :D </div>
+				<div class="card_tag_container">
+					<div class="card_tag branding">Branding?</div>
+				</div>
+				
+			</a>
 			<a href="projects/doc-logos.html" class="card">
 				<img class="card_image" src="assets/doc-logos-cover.png"/>
 				<div class="card_title"> DOC Logos</div>
