--- a/projects/doc-logos.html
+++ b/projects/doc-logos.html
@@ -104,10 +104,10 @@
 		<div class="border"></div>
 			<div class="container_sideBySide"> 
 					<div class="sideBySideItem width_50 fixed">
-						<a href="doodle2021.html" class="navigation">
+						<a href="fonts.html" class="navigation">
 							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
 						</a>
-						<div class="content_text_no_margin">A Doodle a Week</div>
+						<div class="content_text_no_margin">Fonts!</div>
 					</div>
 					<div class="sideBySideItem_isLast width_50 align_right fixed">
 						<a href="outing-guide.html" class="navigation">
