--- a/projects/projrunway.html
+++ b/projects/projrunway.html
@@ -41,7 +41,7 @@
 			</div>
 		</div>
 		<div class="section_summary_text">
-			<div class="summary_title">Sewing Projces</div>
+			<div class="summary_title">Sewing Projects</div>
 			<br/>
 			<div class="summary_description"> 
                 I lived with two wonderful friends in 2021, but they both got engaged and moved out! I was left with two wedding invites and no dresses to wear for them. Introducing my sewing phase. I already knew the basics of sewing from taking "Family and Consumer Sciences" in middle school, and now was the time to put my rudimentary skills to the test with custom dresses!
