--- a/projects/adventurebook.html
+++ b/projects/adventurebook.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-<div class="head">
+<div class="head" id="head">
 	<div style="padding-top: 35px;"></div>
 	<header class="container">
 		<a href="../index.html"><img class="logo" src="../assets/reginaLogo.png" alt="Regina Yan"></a>
