--- a/designthinking.html
+++ b/designthinking.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<div class="head">
+	<div class="head" id="head">
 	<div style="padding-top: 35px;"></div>
 		<header class="container">
 			<a href="index.html"><img class="logo" src="assets/reginaLogo.png" alt="Regina Yan"></a>
