--- a/projects/flow.html
+++ b/projects/flow.html
@@ -18,7 +18,7 @@
 		</script>
 </head>
 <body>
-	<div class="head">
+	<div class="head" id="head">
 			<a href="../index.html" class="logo" id="logo"></a>
 		<header class="container">
 			<div class="topnav" id="myTopnav">
