--- a/projects/wintercarnival.html
+++ b/projects/wintercarnival.html
@@ -18,7 +18,7 @@
 		</script>
 </head>
 <body>
-	<div class="head">
+	<div class="head" id="head">
 		<!-- <div style="padding-top: 35px;"></div> -->
 		<a href="../index.html"><img class="logo" id="logo" src="../assets/regina-logo.svg" alt="Regina Yan"></a>
 		<header class="container">
@@ -148,6 +148,30 @@
     // start scrolling
     scroll(scrollContainer, scrollContainer.scrollTop, targetY, 0);
 }
+</script>
+<script>
+	var scrollpos = window.scrollY;
+	var header = document.getElementById("head");
+
+	function add_class_on_scroll() {
+		header.classList.add("borderBottom");
+	}
+
+	function remove_class_on_scroll() {
+		header.classList.remove("borderBottom");
+	}
+
+	window.addEventListener('scroll', function(){ 
+		scrollpos = window.scrollY;
+		console.log(scrollpos);
+		if(scrollpos > 20){
+			add_class_on_scroll();
+		}
+		else {
+			remove_class_on_scroll();
+		}
+		console.log(scrollpos);
+	});
 </script>
 
 </html>
