fixing font stuff on mobile

--- a/about.html
+++ b/about.html
@@ -144,10 +144,10 @@
 	<div class="container_content_wrapper_resume">
 		<div class="container_content_wrapper_content vertical">
 			<div class="container_sideBySide">
-				<div class="sideBySideItem width_50">
+				<div class="sideBySideItem width_50 stay_50">
 					<div class="summary_title">HIGHLIGHTS</div>
 				</div>
-				<div class="sideBySideItem width_50 sideBySideItem_isLast sideBySideItem_alignEnd">
+				<div class="sideBySideItem width_50 stay_50 sideBySideItem_isLast sideBySideItem_alignEnd">
 					<a
 					href="assets/reginayan_resume.pdf"
 					target="_blank" class="button_secondary no_margin">Full Resume PDF <i class="fas
