adding nomad wall hanging

--- a/physical.html
+++ b/physical.html
@@ -57,6 +57,14 @@
 					<div class="card_tag wood">Wood</div>
 				</div>
 			</a>
+			<a href="projects/nomad.html" class="card">
+				<img class="card_image" src="assets/nomad-cover.png"/>
+				<div class="card_title">Nomad</div>
+				<div class="card_description">A wall hanging inspired by San Francisco skies</div>
+				<div class="card_tag_container">
+					<div class="card_tag weaving">Weaving</div>
+				</div>	
+			</a>
 			<a href="projects/punchy.html" class="card">
 				<img class="card_image" src="assets/punch.png"/>
 				<div class="card_title">A Punch Needle Love Story</div>
