--- a/projects/nomad.html
+++ b/projects/nomad.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Punch Needling</title>
+	<title>Regina | Nomad</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" rel="stylesheet">	<link runat="server" rel="icon" type="image/png" href="assets/favicon-01.png">
@@ -37,14 +37,14 @@
 	<div class="container_summary">
 		<div class="section_summary">
 			<div class="caption_container">
-				<img class="summary_image" src="../assets/punch.png"/>
+				<img class="summary_image" src="../assets/nomad-cover.png"/>
 			</div>
 		</div>
 		<div class="section_summary_text">
-			<div class="summary_title">A Punch Needling Love Story</div>
+			<div class="summary_title">Nomad</div>
 			<br/>
 			<div class="summary_description"> 
-				I compulsively bought a couple punch needling tools after failing to secure a tufting gun, aaaaand I needed some inspiration to justify my many purchases.
+                2023 was a year of digital nomading along the west coast. First stop? San Francisco! My partner Shep and I were lucky enough to find a Facebook Marketplace sublet on Ocean Beach with a large window overlooking the ocean. Working early east coast hours, I watched gorgeous sunrise after sunrise as the sky transformed into countless shades of purple, pink and blue. I also happened to live near Love Fest Fibers who offers small-batch, sustainably sourced yarn and my goodness I'm never going back to Joann's again! (my wallet disagrees). <br/><br/>I present to you, Nomad!
 			</div>
 			<a href="#container_content"><button class="button_circle_arrow" >
 				<i class="fas fa-arrow-down"></i>			
@@ -53,93 +53,34 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
-		
-
-		<div class="card_title">Dartmouth Pillow</div>
-		<div class="content_text">A wedding gift for friends featuring some of their favorite places on campus </div>
-		<img class="summary_image" src="../assets/pillow1.png"/>
-		<div class="container_sideBySide"> 
-				<div class="sideBySideItem width_33">
-						<img class="summary_image" src="../assets/pillow2.png"/>
-				</div>
-				<div class="sideBySideItem width_33">
-						<img class="summary_image" src="../assets/pillow3.png"/>
-				</div>
-				<div class="sideBySideItem width_33">
-						<img class="summary_image" src="../assets/pillow4.png"/>
-				</div>
-		</div>
-
-
-
-		<div class="card_title">The Office Coasters</div>
-		<div class="content_text">A gift for my sister Karen, the number 1 Office fan in the world, to celebrate her graduation from West Point!</div>
-		<div class="container_sideBySide"> 
+        <div class="content_text">Look at how fun the pokey yellow yarn is! It's called "Color Core"</div>
+        <div class="container_sideBySide"> 
 				<div class="sideBySideItem width_50">
-						<img class="summary_image" src="../assets/office1.png"/>
+                        <img class="summary_image" src="../assets/nomad-detail.png"/>
 				</div>
-				<div class="sideBySideItem width_50">
-						<img class="summary_image" src="../assets/office2.png"/>
-				</div>
-		</div>
-
-
-		<div class="card_title">Leaf Coasters</div>
-		<div class="content_text">Birthday gift for a roomate! This was my first attempt at punch needle embroidery and I loved how detailed I could be! </div>
-		<div class="container_sideBySide"> 
-				<div class="sideBySideItem width_50">
-						<img class="summary_image" src="../assets/leaf1.png"/>
-				</div>
-				<div class="sideBySideItem width_50">
-						<img class="summary_image" src="../assets/leaf2.png"/>
-				</div>
-		</div>
-
-		<div class="card_title">Dartmouth Coasters</div>
-		<div class="content_text">A surprise for friends who just moved into their new home! The places are locations on campus that were special to them  </div>
-		<img class="summary_image" src="../assets/dartcoast.png"/>
-
-
-		<div class="card_title">Throw pillows</div>
-		<div class="content_text">For the roommates! Two pillows that mimicked their personalities </div>
-		<img class="summary_image" src="../assets/throw.png"/>
-
-		<div class="card_title">Worms!</div>
-		<div class="content_text">I had initially called this "Scribble" because the design came from a scribble I doodled while watching TV, but I have been told this gives off strong worm vibes, so here we are! This project included an exploration into yarn dyeing -- I started with white wool yarn and created the colors with acid dyes. Lots of fun! </div>
-		<div class="container_sideBySide"> 
-				<div class="sideBySideItem width_50">
-						<img class="summary_image" src="../assets/worms1.png"/>
-				</div>
-				<div class="sideBySideItem width_50">
-						<img class="summary_image" src="../assets/worms3.png"/>
-				</div>
-		</div>
-		<div class="container_sideBySide"> 
-				<div class="sideBySideItem width_50">
-						<img class="summary_image" src="../assets/worms4.png"/>
-				</div>
-				<div class="sideBySideItem width_50">
-						<img class="summary_image" src="../assets/worms2.png"/>
-				</div>
-		</div>
-
+				<div class="sideBySideItem_isLast width_50">
+                        <img class="summary_image" src="../assets/nomad-detail2.png"/>
+                </div>
+        </div>
+        <div class="content_text">...and, of course, the view from the window! (yes, this is a sunset view, but the photos of the wall hanging are from sunrise, don't worry!)</div>
+        <img class="summary_image" src="../assets/nomad-window.png"/>
 		<div class="border"></div>
 		<div class="container_sideBySide"> 
-			<div class="sideBySideItem width_50 fixed">
-				<a href="nomad.html" class="navigation">
-					<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
-				</a>
-				<div class="content_text_no_margin">Nomad weaving</div>
+				<div class="sideBySideItem width_50 fixed">
+					<a href="climbingwall.html" class="navigation">
+						<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+					</a>
+					<div class="content_text_no_margin">Climbing Wall</div>
+				</div>
+				<div class="sideBySideItem_isLast width_50 align_right fixed">
+					<a href="punchy.html" class="navigation">
+						<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+					</a>
+					<div class="content_text_no_margin">Punch Needling</div>
+				</div>
 			</div>
-			<div class="sideBySideItem_isLast width_50 align_right fixed">
-				<a href="projrunway.html" class="navigation">
-					<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
-				</a>
-				<div class="content_text_no_margin">Sewing Projects</div>
-			</div>
-		</div>
-	</div>
-
+		
+    </div>
 </div>
 <div class="footer">
 	<div>
