--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 			<div class="category_subtitle halfwidth fadeIn" style="visibility:hidden" id="delay">
 				A designer and engineer with a passion for <div class="inline_tag" id="tag1"></div> and <div class="inline_tag" id="tag2">Human-Centered Design</div>
 			</br></br>
-				I'm primarily interested in product and UI/UX design and am inspired by solutions
-				that positively impact our community and environment. Currently I'm digital nomading along the West Coast and improving the medical billing process with SuperBill.
+				Designer, engineer, goofball, and lover of the outdoors. Currently eating chocolate, digital nomading along the West Coast, and helping folks navigate the complicated healthcare claim filing world with SuperBill.
 			</br></br>
 				<!-- This site is under construction during <p id="month" style="display:inline"></p> <p id="year" style="display:inline"></p> (devs, there are bugs! UXDs, shield your eyes!) but write-ups will be written and code will be coded soon! -->
 			</div>
