added linoleum, nomad, updated ECG

--- a/physical.html
+++ b/physical.html
@@ -57,6 +57,14 @@
 					<div class="card_tag wood">Wood</div>
 				</div>
 			</a>
+			<a href="projects/linotime.html" class="card">
+				<img class="card_image" src="assets/lino-cover.png"/>
+				<div class="card_title">Linoleum Printmaking</div>
+				<div class="card_description">It's about time to try ANOTHER craft hobby!! This ability to mass-ish produce my own prints might just be the start of my etsy empire.</div>
+				<div class="card_tag_container">
+					<div class="card_tag printmaking">Printmaking</div>
+				</div>	
+			</a>
 			<a href="projects/nomad.html" class="card">
 				<img class="card_image" src="assets/nomad-cover.png"/>
 				<div class="card_title">Nomad</div>
