--- a/projects/linotime.html
+++ b/projects/linotime.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Nomad</title>
+	<title>Regina | Printmaking</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" rel="stylesheet">	<link runat="server" rel="icon" type="image/png" href="assets/favicon-01.png">
@@ -37,14 +37,14 @@
 	<div class="container_summary">
 		<div class="section_summary">
 			<div class="caption_container">
-				<img class="summary_image" src="../assets/nomad-cover.png"/>
+				<img class="summary_image" src="../assets/lino-cover.png"/>
 			</div>
 		</div>
 		<div class="section_summary_text">
-			<div class="summary_title">Nomad</div>
+			<div class="summary_title">Printmaking</div>
 			<br/>
 			<div class="summary_description"> 
-                2023 was a year of digital nomading along the west coast. First stop? San Francisco! My partner Shep and I were lucky enough to find a Facebook Marketplace sublet on Ocean Beach with a large window overlooking the ocean. Working early east coast hours, I watched gorgeous sunrise after sunrise as the sky transformed into countless shades of purple, pink and blue. I also happened to live near Love Fest Fibers who offers small-batch, sustainably sourced yarn and my goodness I'm never going back to Joann's again! (my wallet disagrees). <br/><br/>I present to you, Nomad!
+                I'm not quite sure what got me into linocutting. Perhaps my penchant for detailed, manual things? Or my desire to take production into my own hands and share my artwork in a tangbile format? Either way, I'm journeying into the exciting world of printmaking as a potential first step towards creating my ~Etsy Empire~
 			</div>
 			<a href="#container_content"><button class="button_circle_arrow" >
 				<i class="fas fa-arrow-down"></i>			
@@ -53,34 +53,68 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
-        <div class="content_text">Look at how fun the pokey yellow yarn is! It's called "Color Core"</div>
-        <div class="container_sideBySide"> 
-				<div class="sideBySideItem width_50">
-                        <img class="summary_image" src="../assets/nomad-detail.png"/>
-				</div>
-				<div class="sideBySideItem_isLast width_50">
-                        <img class="summary_image" src="../assets/nomad-detail2.png"/>
-                </div>
+		<div class="card_title">The Test Piece: a portrait</div>
+        <div class="content_text">
+            I need a low-stakes design for my first project - something that was just for me without any pressure of selling it! I drew a portrait of Shep & myself on my iPad, traced over the screen onto a piece of paper, and did the "graphite scribble" method to transfer the drawing onto my Speedball rubber linoleum block... and it turned out alright! <br/><br/>
+            Lessons learned: I need a better way to transfer drawings onto the carving block. Also, this is a lot of fun.
         </div>
-        <div class="content_text">...and, of course, the view from the window! (yes, this is a sunset view, but the photos of the wall hanging are from sunrise, don't worry!)</div>
-        <img class="summary_image" src="../assets/nomad-window.png"/>
-		<div class="border"></div>
+		<img class="summary_image" src="../assets/lino-shep1.png"/>
+        <div class="container_sideBySide"> 
+            <div class="sideBySideItem width_33">
+                    <img class="summary_image outline" src="../assets/lino-shep3.png"/>
+            </div>
+            <div class="sideBySideItem width_33">
+                    <img class="summary_image" src="../assets/lino-cover.png"/>
+            </div>
+            <div class="sideBySideItem width_33 sideBySideItem_isLast">
+                    <img class="summary_image" src="../assets/lino-shep2.png"/>
+            </div>
+        </div>
+	</br>
+</br>
+		<div class="card_title">"Reggie on a Roll": East Coast Greenway Alliance fundraising print</div>
+        <div class="content_text">Up next: making something that people might actually PURCHASE?!?! I've made countless physical art pieces but actually never sold anything before. I wasn't technically selling this -- I mailed a free print to anyone who donated $20+ to the East Coast Greenway Alliance (the organization who made my <a
+			href="./ecg.html" class="link"
+			target="_blank">bike trip</a> possible!) -- but it was actually a rather scary experience making stuff for others and feeling stressed about getting everything perfect.
+        I did try a new transfer method - I printed my design with a laser printer (thank you SF public library for free printing!), then used nail polish remover to transfer the ink onto the rubber block. Worked perfectly! See image below for the transfer results. I also realized that the water-based Speedball ink had a tendency to rub off on my fingers / on other items, so I used a Krylon matte spray finisher to hopefully keep the ink from running. 
+<br/><br/>
+        Lessons learned: USPS can ship a print in a flat mailer envelope for about $1.50! Also, consider archival ink or eventually oil-based ink for a nicer finish. Also, don't use plain old cardstock, probably want a printmaking-specific paper. Also probably should get one of those Pfeil tools for more precise detailed cuts. Also, this really is insanely fun.
+<br/>
+		<a href="https://www.instagram.com/p/CsrCPZvJ-Ej/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank" class="button_secondary">Donate & Get this print! <i class="fas fa-external-link-square-alt"></i></a>
+        </div>
+		<img class="summary_image" src="../assets/lino-reggie1.png"/>
 		<div class="container_sideBySide"> 
-				<div class="sideBySideItem width_50 fixed">
-					<a href="linotime.html" class="navigation">
-						<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
-					</a>
-					<div class="content_text_no_margin">Printmaking</div>
+				<div class="sideBySideItem width_33">
+                        <img class="summary_image outline" src="../assets/lino-reggie5.png"/>
 				</div>
-				<div class="sideBySideItem_isLast width_50 align_right fixed">
-					<a href="punchy.html" class="navigation">
-						<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
-					</a>
-					<div class="content_text_no_margin">Punch Needling</div>
+				<div class="sideBySideItem width_33">
+                        <img class="summary_image" src="../assets/lino-reggie2.png"/>
+                </div>
+                <div class="sideBySideItem width_33 sideBySideItem_isLast">
+                        <img class="summary_image" src="../assets/lino-reggie3.png"/>
 				</div>
 			</div>
+	</br>
+</br>
 		
-    </div>
+		<div class="border"></div>
+		
+		<div class="container_sideBySide"> 
+			<div class="sideBySideItem width_50 fixed">
+				<a href="climbingwall.html" class="navigation">
+					<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+				</a>
+				<div class="content_text_no_margin">Climbing Wall</div>
+			</div>
+			<div class="sideBySideItem_isLast width_50 align_right fixed">
+				<a href="nomad.html" class="navigation">
+					<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+				</a>
+				<div class="content_text_no_margin">Nomad weaving</div>
+			</div>
+		</div>
+	</div>
+
 </div>
 <div class="footer">
 	<div>
