--- a/projects/climbingwall.html
+++ b/projects/climbingwall.html
@@ -243,10 +243,10 @@
 						<div class="sideBySideItem width_50 fixed">
 						</div>
 						<div class="sideBySideItem_isLast width_50 align_right">
-							<a href="nomad.html" class="navigation">
+							<a href="linotime.html" class="navigation">
 								<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 								</a>
-								<div class="content_text_no_margin">Nomad weaving</div>
+								<div class="content_text_no_margin">Printmaking</div>
 						</div>
 					</div>
 
